Fix bug 111614 (JuK doesn't support media:/ ioslave).  There's a catch though, you still won't be able to add files from media:/ from within JuK, until they fix the KFileDialog to either return media:/ URLs or convert them to local files when in LocalFileOnly mode.

You can drag them in from Konqueror though, although Konq already converts the filenames so
I don't see how that was an issue.

So in short, I fixed a bug that you shouldn't be able to reproduce... weird.  But this helps
to future-proof JuK a little.

BUG:111614

svn path=/branches/KDE/3.5/kdemultimedia/juk/; revision=456471